src/pages/ru/v1.10.0/cli.mdx
---
Заголовок: «CLI OpenReplay»
MetaTitle: «CLI OpenReplay»
MetaDescription: «Детали о CLI-утилите OpenReplay»
MinVersion: «1.10.0»
---

Начиная с версии 1.10.0 мы выпустили нашу CLI-утилиту. С помощью нее большинство обычных задач, которые вы должны были бы выполнить для управления самостоятельно развернутой версией OpenReplay, теперь можно выполнить одной простой командой.

## Установка CLI

CLI поставляется вместе с каждой самостоятельно развернутой версией OpenReplay.

## Использование CLI

CLI имеет следующий синтаксис:


```bash 
openreplay [command] <service>
```


Список доступных команд:

- `-h или --help`: эта команда отобразит список доступных команд и служб.
- `-s или --status`: если вы хотите узнать, каков статус развернутых служб, эта команда даст вам всю необходимую информацию.
- `-u или --upgrade`: используется для обновления вашей установки до последней доступной версии.
- `-U или --deprecated-upgrade /path/to/old_vars.yaml`: ????
- `-r или --restart`: позволяет перезапустить все службы. Таким образом, вы можете исправить неотвечающие службы.
- `-R или --Reload`: перезагружает конфигурацию службы, поэтому используйте ее только при изменении чего-либо.
- `-p или --install-packages`: обновляет все внешние зависимости (такие как `kubectl`, `helm` и т. д.).
- `-l или --logs SERVICE`: показывает журналы от одной особой службы.

Список всех служб, доступных для CLI:

- предупреждения
- активы
- помощь
- чалис
- база данных
- конец
- интерфейс
- геристика
- http
- интеграции
- ngix-контроллер
- пиры
- раковина
- sourcemapreader
- хранилище

## Пример

Чтобы узнать статус развертывания, выполните следующую команду CLI:


```bash 
openreplay -s 
```

