src/pages/ru/v1.11.0/cli.mdx
---
Заголовок: "CLI OpenReplay"
MetaTitle: "CLI OpenReplay"
MetaDescription: "Детали о полезной утилите CLI OpenReplay"
MinVersion: "1.10.0"
---

Начиная с версии 1.10.0 мы выпустили нашу утилиту CLI. С ее помощью большинство распространенных задач, которые вы должны были бы выполнить для управления самостоятельно развернутой версией OpenReplay, теперь могут быть выполнены одной простой командой.

## Установка CLI

CLI поставляется вместе с каждой самостоятельно развернутой версией OpenReplay.

## Использование CLI

CLI имеет следующий синтаксис:


```bash 
openreplay [command] <service>
```


Список доступных команд:

- `-h или --help`: Эта команда отобразит список доступных команд и служб.
- `-s или --status`: Если вы хотите узнать, каков статус развернутых служб, эта команда даст вам всю необходимую информацию.
- `-u или --upgrade`: Используется для обновления вашей установки до последней доступной версии.
- `-U или --deprecated-upgrade /path/to/old_vars.yaml`: ????
- `-r или --restart`: Позволяет перезапустить все службы. Таким образом, вы можете исправить неответственные службы.
- `-R или --Reload`: Перезагружает конфигурацию службы, поэтому используйте ее только при изменении чего-либо.
- `-p или --install-packages`: Обновляет все внешние зависимости (такие как `kubectl`, `helm` и т. д.).
- `-i или --install domain.name.com`: Устанавливает OpenReplay на машину.
- `-e или --edit`: Редактирует установленную конфигурацию OpenReplay и перезагружает.
- `-l или --logs SERVICE`: Отображает журналы от одной особой службы.

Список всех доступных служб для CLI:

- оповещения
- активы
- помощь
- чалис
- база данных
- конец
- интерфейс
- геристики
- http
- интеграции
- контроллер ngix
- пиры
- раковина
- sourcemapreader
- хранилище

## Пример
Чтобы узнать статус развертывания, выполните нижеуказанную команду CLI:


```bash 
openreplay -s 
```

